# simple-drand

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml
src/: config.rs  lib.rs
tests/: integration_tests.rs
