[package]
name = "drand-client"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
config = "0.14"
dotenv = "0.15"
hex = "0.4"
bls12_381 = { version = "0.8", features = ["experimental"] }
group = "0.13"
pairing = "0.23"
# Match digest and sha2 versions with bls12_381
digest = "0.9"
sha2 = "0.9"

[dev-dependencies]
tokio-test = "0.4"
